--- a/KodalibApi/KodalibApi/appsettings.json
+++ b/KodalibApi/KodalibApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=kodalib;Port=5432;Username=postgres;Password=monvormo"
+    "DefaultConnection": "Server=db;Database=kodalib;Port=5432;Username=postgres;Password=monvormo"
   }
 }
